improved and debugged run system (js and ts files + other improvements)